# e21-3yp-Smart-IV

./: .gitignore  AWS_INTEGRATION_JOURNAL.md  README.md  SmartIV_AWS_Setup_Guide.md  app.json  package-lock.json  package.json
.github/workflows/: tests.yml
Desktop-App-Rust/: .gitignore  codebase_guide.md  desktop_codebase_guide.md  index.html  package-lock.json  package.json  test_report.md  vite.config.ts
Desktop-App-Rust/src/: App.tsx  index.css  main.tsx  types.ts
Desktop-App-Rust/src-tauri/: Cargo.toml  tauri.conf.json
Desktop-App-Rust/src-tauri/capabilities/: default.json
Desktop-App-Rust/src-tauri/icons/: README.md  icon.icns
Desktop-App-Rust/src-tauri/src/: alert.rs  commands.rs  db.rs  lib.rs  main.rs  models.rs  mqtt.rs  serial.rs  serial_tests.rs
Desktop-App-Rust/src-tauri/tests/: integration_tests.rs
app/: _layout.tsx  index.tsx
app/(app)/: _layout.tsx  alerts.tsx  ward.tsx
docs/: .gitignore  chatbot.css  chatbot.html  chatbot.js  explore.css  explore.html  explore.js  index.html  journal.html
docs/data/: index.json
docs/testing/: Week6_Test_Design.md  Week6_Test_Results.md
firmware/bedside- unit-dualcore/: platformio.ini
services/: apiService.ts  authService.ts
smart-iv-dashboard/: README.md  electron-builder.yml  package-lock.json  package.json
smart-iv-mobile/: .gitignore  TEST_REPORT.md  jest-mockComponent.js  jest-setup.js  jest.config.js  mobile_codebase_guide.md  package-lock.json  package.json
smart-iv-mobile/app/: _layout.tsx  index.tsx
src/components/: FlowChart.tsx  LoadingSpinner.tsx
stores/: bedStore.ts
(+104 files in other folders)
