[package]
name = "smart-iv-desktop"
version = "1.0.0"
description = "Smart IV Nurse Station Dashboard"
authors = ["Group 19"]
edition = "2021"

[lib]
name = "smart_iv_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "smart-iv-desktop"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.7", features = ["sqlite", "runtime-tokio-native-tls", "chrono"] }
serialport = "4"
tokio-serial = "5.4"
rumqttc = "0.24"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
env_logger = "0.11"
anyhow = "1"
thiserror = "1"
once_cell = "1"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
